--- a/index.html
+++ b/index.html
@@ -287,34 +287,34 @@
                 switch(identity) {
                     case "田雷":
                         resultText.innerHTML = "💝 你的老婆来接你喽～<br>来喽来喽！";
-                        addImage("images/tianlei.JPG", "田雷");
+                        addImage("./images/tianlei.JPG", "田雷");
                         break;
                     case "郑朋":
                         resultText.innerHTML = "💙 你的老公来接你喽～<br>来喽来喽！";
-                        addImage("images/zhengpeng.JPG", "郑朋");
+                        addImage("./images/zhengpeng.JPG", "郑朋");
                         break;
                     case "甜玉米":
                         resultText.innerHTML = "🌽 甜玉米爆发！粒量超乎想象！";
-                        addImage("images/tianyumi.JPG", "甜玉米");
+                        addImage("./images/tianyumi.JPG", "甜玉米");
                         setTimeout(() => {
                             resultText.innerHTML = "这次与你一起战斗的是gg们！🕵️";
-                            addImage("images/zhentan.JPG", "侦探");
+                            addImage("./images/zhentan.JPG", "侦探");
                         }, 2000);
                         setTimeout(() => {
                             resultText.innerHTML = "副本通关！解锁成就：幸福の四口之家 ☺️";
-                            addImage("images/family.JPG", "一家四口");
+                            addImage("./images/family.JPG", "一家四口");
                         }, 4000);
                         break;
                     case "萌磕腐蟑螂":
                         resultText.innerHTML = "🪳 小蟑螂出击！为大jv冲锋！";
-                        addImage("images/mkfzl.JPG", "萌磕腐蟑螂");
+                        addImage("./images/mkfzl.JPG", "萌磕腐蟑螂");
                         setTimeout(() => {
                             resultText.innerHTML = "这次与你一起战斗的是米米们！🕵️";
-                            addImage("images/zhentan.JPG", "侦探");
+                            addImage("./images/zhentan.JPG", "侦探");
                         }, 2000);
                         setTimeout(() => {
                             resultText.innerHTML = "副本通关！解锁成就：幸福の四口之家 ☺️";
-                            addImage("images/family.JPG", "一家四口");
+                            addImage("./images/family.JPG", "一家四口");
                         }, 4000);
                         break;
                     case "柠檬水":
@@ -338,18 +338,18 @@
                     case "洗脚水":
                     case "牛蛋子":
                         resultText.innerHTML = "❌ 未检测到，已发卖<br>⚠️ 检测到0.7🌼菊花黑洞🕳️粉";
-                        addImage("images/jvhua.JPG", "菊花");
+                        addImage("./images/jvhua.JPG", "菊花");
                         setTimeout(() => {
                             resultText.innerHTML = "让我猜猜你们在干嘛<br>又控制不住自己啦？咋喷💩尼";
-                            addImage("images/shi.jpg", "屎");
+                            addImage("./images/shi.jpg", "屎");
                         }, 2000);
                         break;
                     case "屎壳郎":
                         resultText.innerHTML = "💩 滚啊！";
-                        addImage("images/rk.jpg", "辱磕");
+                        addImage("./images/rk.jpg", "辱磕");
                         setTimeout(() => {
                             resultText.innerHTML = "让我猜猜你们在干嘛<br>又控制不住自己啦？咋喷💩尼";
-                            addImage("images/shi.jpg", "屎");
+                            addImage("./images/shi.jpg", "屎");
                         }, 2000);
                         break;
                     default:
